--- a/planko/scripts/build_worlds/history.txt
+++ b/planko/scripts/build_worlds/history.txt
@@ -1,77 +1,3 @@
-dm_dims $dm
-package require dbscan
-dbscan::cluster
-dl_local assigned [dbscan::cluster $dm]
-dl_tcllist $assigned
-dl_max $dm:0
-dl_max $dm:1
-dl_min $dm:0
-package require dbscan
-package require dtw
-dg_read jitters
-dl_local t [dl_llist [dl_choose jitters:x:0 [dl_fromto 0 50]] [dl_choose jitters:y:0 [dl_fromto 0 50]]]
-dl_local t [dl_transpose $t]
-dl_local dm [dtwDistanceOnly $t]
-dl_local assigned [dbscan::cluster $dm 10]
-dl_tcllist $assigned
-dl_max $assigned
-source jitter_worlds.tcl
-cluster_jittered_trajectories jitters 0 100 
-source jitter_worlds.tcl
-cluster_jittered_trajectories jitters 0 100 
-dg_view group0
-cluster_jittered_trajectories jitters 1 100 
-dg_view group1
-dl_max group1:cluster
-dl_max group0:cluster
-cluster_jittered_trajectories jitters 1 100 25
-dl_max group2:cluster
-cluster_jittered_trajectories jitters 8 100 25
-dl_max group3:cluster
-cluster_jittered_trajectories jitters 18 100 25
-dl_max group4:cluster
-cluster_jittered_trajectories jitters 18 100 20
-dl_max group5:cluster
-cluster_jittered_trajectories jitters 18 100 30
-dl_max group6:cluster
-cluster_jittered_trajectories jitters 18 200 30
-dg_read jitters
-cluster_jittered_trajectories jitters 3 250 30
-source jitter_worlds.tcl
-cluster_jittered_trajectories jitters 3 250 30
-dg_view group0
-dl_max group0
-dl_max group0:cluster
-dl_tcllist [dl_sortedFunc group0:cluster group0:cluster dl_lengths]
-cluster_jittered_trajectories jitters 3 250 25
-dl_tcllist [dl_sortedFunc group1:cluster group1:cluster dl_lengths]
-package require dtw
-dtwDistanceOnly
-dg_view jitters
-
-dl_tcllist [dtwDistanceOnly [dl_llist jitters:x:0:0 jitters:y:0:0] [dl_llist jitters:x:0:1 jitters:y:0:1]]
-time { cluster_jittered_trajectories jitters 3 250 25 }
-dg_dir
-dg_read jitters
-source jitter_worlds.tcl
-time { cluster_jittered_trajectories jitters 3 250 25 }
-dl_tcllist [dl_sortedFunc group0:cluster group0:cluster dl_lengths]
-source jitter_worlds.tcl
-dg_dir
-time { cluster_jittered_trajectories jitters 3 250 25 }
-dl_tcllist [dl_sortedFunc group1:cluster group1:cluster dl_lengths]
-source jitter_worlds.tcl
-time { cluster_jittered_trajectories jitters 3 250 25 }
-dl_tcllist [dl_sortedFunc group2:cluster group2:cluster dl_lengths]
-source jitter_worlds.tcl
-time { cluster_jittered_trajectories jitters 3 250 25 }
-dl_tcllist [dl_sortedFunc group3:cluster group3:cluster dl_lengths]
-source jitter_worlds.tcl
-time { cluster_jittered_trajectories jitters 3 2 250 25 }
-time { cluster_jittered_trajectories jitters 3 250 2 25 }
-dg_dir
-dl_tcllist [dl_sortedFunc group5:cluster group5:cluster dl_lengths]
-cluster_jittered_trajectories jitters 7 250 2 25
 dl_tcllist [dl_sortedFunc group6:cluster group6:cluster dl_lengths]
 cluster_jittered_trajectories jitters 7 250 1 25
 dl_tcllist [dl_sortedFunc group7:cluster group7:cluster dl_lengths]
@@ -97,4 +23,77 @@ dl_tcllist [dl_index [dl_zeros 10]]
 dl_fromto 0 0
 dl_tcllist [dl_fromto 0 0]
 dl_choose [dl_fromto 0 10] [dl_fromto 0 0]
-dl_tcllist [dl_choose [dl_fromto 0 10] [dl_fromto 0 0]]
+dg_read jitters
+dg_view jitters
+package require trajectory_analysis
+trajectory_analysis
+trajectory_analyze
+dl_local t1 [dl_transpose [dl_llist jitters:x:0 jitters:y:0]]
+dl_length $t1
+dl_length $t1:0
+dl_length $t1:0:0
+package require trajectory_analysis
+dg_view jitters
+dg_read jitters
+dg_view jitters
+dl_local t [dl_llist jitters:x:0 jitters:y:0]
+trajectory_analyze
+trajectory_analyze $t
+dl_length $g
+dl_length $t
+dl_length $t:0
+dl_length $t
+trajectory_analyze $t
+dl_length $t
+dl_local t1 [dl_transpose $t]
+dl_length $t1
+dl_length $t1:0
+dl_length $t1:0:1
+dl_length $t1:0:0
+dl_local t [dl_transpose [dl_llist jitters:x:0 jitters:y:0]]
+trajectory_analyze $t
+dg_view group0
+dl_length group0:kde_grid
+dg_read jitters
+dl_local t [dl_transpose [dl_llist jitters:x:0 jitters:y:0]]
+package require trajectory_analysis
+trajectory_analyze $t
+dg_read jitters
+dl_local t [dl_transpose [dl_llist jitters:x:0 jitters:y:0]]
+package require trajectory_analysis
+trajectory_analyze $t
+dg_view group0
+dlg_image
+dlg_image 50 50 group0:kde_grid 
+setwindow 0 0 10 10
+dlg_image 50 50 group0:kde_grid 5
+dlg_image 50 50 [dl_llist "50 50" group0:kde_grid] 5
+dl_max group0:kde_grid
+dlg_image 50 50 [dl_llist "50 50" [dl_char [dl_mult group0:kde_grid 70]]] 5
+flushwin
+dumpwin pdf /tmp/grid.pdf
+exec open /tmp/grid.pdf
+dlp_pop all
+setwindow 0 0 10 10
+dl_local pix [dl_char 
+flushwin
+dumpwin pdf /tmp/grid1.pdf
+exec open /tmp/grid1.pdf
+dl_local t [dl_transpose [dl_llist jitters:x:1 jitters:y:1]]
+trajectory_analyze $t
+dg_view group1
+trajectory_analyze [dl_transpose [dl_llist jitters:x:2 jitters:y:2]]
+dg_view group2
+trajectory_analyze [dl_transpose [dl_llist jitters:x:3 jitters:y:3]]
+dg_view group3
+trajectory_analyze [dl_transpose [dl_llist jitters:x:4 jitters:y:4]]
+dg_view group4
+dg_dir
+dl_length stimdg:id
+source test_planko3.tcl
+dg_dir
+string length temp_session_1752934808723559_tid0x16cf8f000
+source test_planko3.tcl
+load_system planko bounce multiball
+evalNoReply
+set errorInfo
